# JsonSettings

./: README.md
example/: CMakeLists.txt  main.cpp  settings.json
src/: settings.cpp  settings.h
